# hutoken

./: .clang-tidy  .gitignore  .gitmodules  MANIFEST.in  README.md  compile_flags.txt  hutoken.py  pyproject.toml  pyroject.toml  requirements.txt  setup.py
.github/workflows/: publish-package.yml
include/: fomalib.h
include/hutoken/: ac.h  arena.h  bbpe.h  bpe.h  core.h  hash.h  hashmap.h  helper.h  lib.h  parser.h  pretokenizer.h  queue.h  string.h  taskqueue.h  vector.h
scripts/: benchmark.py  emmorph.sh  profiler.py  sig_test.py  threaded_benchmark.sh
scripts/vocab-convert/: gpt-json-to-hex.py  vocab.json
src/: ac.c  arena.c  bbpe.c  bpe.c  core.c  hash.c  hashmap.c  helper.c  lib.c  parser.c  pretokenizer.c  queue.c  string.c  taskqueue.c  vector.c
tests/: aux-test.py  test_ac.c  test_arena.c  test_hashmap.c  test_parser.c  test_pretokenizer.c  test_queue.c  test_string.c  test_tokenizer.py  test_vector.c
vocabs/: gpt2-vocab-from-json.txt.bak  gpt2-vocab.txt  invalid-vocab.txt  vocab.txt
