[project]
name = "hutoken"
version = "0.1.0.dev6"
description = "Fast BPT tokeniser for Hungarian language."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = [ "LICENSE" ]

authors = [
    { name = "NYTUD", email = "linginst@nytud.elte.hu" },
    { name = "Mátyás Osváth"},
    { name = "Máté Norbert Molnár", email = "graves-bluff-pesky@duck.com" },
    { name = "Roland Gunics"}
]

keywords = ["text-tokenization", "neural-network", "machine-learning"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

[project.optional-dependencies]
foma = [
    "foma"
]
transformers = [
    "transformers"
]
dev = [
    "tiktoken",
    "pytest"
]

[tool.setuptools]
py-modules = ["hutoken"]

[project.urls]
Homepage = "https://github.com/matyasosvath/hutoken"
Repository = "https://github.com/matyasosvath/hutoken"
Issues = "https://github.com/matyasosvath/hutoken/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
